--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <h1>Pizza!</h1>
     <p>My Favorite Toppings: </p>
     <ul>
-      <li>Pepperoni</li>
-      <li>Mozzarella Cheese</li>
+      <li>Eggplant</li>
+      <li>Olives</li>
       <li>Mushrooms</li>
     </ul>
   </div>
